# rag_llm_design_autonomus

./: .env.example  .gitignore  404.html  CLAUDE.md  README.cs.md  README.md  index.html  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: build-worker.md  eval-worker.md  orchestrator.md  python-tutor.md  supervisor.md  swarm-agent.md
.claude/commands/: build.md  eval.md  experiment.md  ingest.md  swarm.md  test.md
.claude/hooks/: pre_sandbox.sh
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
concepts/bm25/: index.html
concepts/embeddings/: index.html
concepts/hybrid-rrf/: index.html
concepts/rag/: index.html
concepts/reranking/: index.html
concepts/swarm/: index.html
concepts/vector-search/: index.html
decisions/: index.html
docs/: architecture.md  decisions.md  experiments.md  index.md  learning-log.md  quickstart.md
docs/concepts/: bm25.md  embeddings.md  hybrid-rrf.md  rag.md  reranking.md  swarm.md  vector-search.md
docs/modules/: api.md  ingest.md  llm.md  pipeline.md  store.md
experiments/: index.html
learning-log/: index.html
modules/api/: index.html
modules/ingest/: index.html
modules/llm/: index.html
modules/pipeline/: index.html
modules/store/: index.html
quickstart/: index.html
search/: search_index.json
src/local_rag/: api.py  bm25.py  cli.py  embed.py  hybrid.py  ingest.py  llm.py  pipeline.py  reranker.py  retrieve.py  store.py  swarm.py  ui.py
tests/eval/: qa_set.jsonl
tests/unit/: test_api.py  test_bm25.py  test_embed.py  test_hybrid.py  test_ingest.py  test_llm.py  (+5 more)
